# ZunTrading

./: .coverage  .gitattributes  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  pyrightconfig.json  requirements-mt5.txt  requirements.txt
.claude/: launch.json
benchmark/: bench_models.py  results.json
data/: paused.flag  risk_profile.json
docs/superpowers/plans/: 2026-06-11-zuntrading-plan.md
docs/superpowers/specs/: 2026-06-11-zuntrading-design.md
scripts/: dry_run.ps1  install_task.ps1  ipc_probe.py  run_scan.ps1  run_ui.ps1  verify.ps1
src/zuntrading/: __init__.py  api.py  brain.py  calibration.py  config.py  data.py  executor.py  indicators.py  journal.py  mode.py  news.py  notify.py  prefilter.py  reporter.py  risk.py  scanner.py
src/zuntrading.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/zuntrading/static/: app.js  index.html  style.css
tests/: test_brain.py  test_config.py  test_data.py  test_executor.py  test_indicators.py  test_journal.py  test_mode_api.py  test_news.py  test_notify.py  test_prefilter.py  test_risk.py  test_scanner.py
