[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zuntrading"
version = "0.1.0"
description = "ZunTrading - Exness MT5 demo auto-trader with Claude brain, hard risk gate, Telegram notify"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["live: tests that call real external services (deselect by default)"]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
